--- a/diycode-app/src/main/res/layout/activity_recycler_refresh.xml
+++ b/diycode-app/src/main/res/layout/activity_recycler_refresh.xml
@@ -41,6 +41,7 @@
 
         <android.support.v4.widget.NestedScrollView
             android:id="@+id/scroll_view"
+            android:background="@color/diy_white_bg"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
