--- a/diycode-app/src/main/res/layout/item_notification.xml
+++ b/diycode-app/src/main/res/layout/item_notification.xml
@@ -22,7 +22,7 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -40,6 +40,8 @@
 
         <com.gcssloop.diycode.widget.CircleImageView
             android:id="@+id/avatar"
+            app:border_width="0dp"
+            app:border_color="#00000000"
             android:layout_width="42dp"
             android:layout_height="43dp"
             android:layout_marginRight="12dp"
