--- a/diycode-app/src/main/res/layout/item_image.xml
+++ b/diycode-app/src/main/res/layout/item_image.xml
@@ -22,8 +22,9 @@
 
 <com.bm.library.PhotoView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/photo_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scaleType="fitCenter"
-    android:src="@mipmap/ic_launcher"/>
+    tools:src="@mipmap/ic_launcher"/>
