--- a/diycode-app/src/main/res/menu/main.xml
+++ b/diycode-app/src/main/res/menu/main.xml
@@ -24,10 +24,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_quick_to_top"
+        android:icon="@mipmap/up"
+        android:title="快速返回"
+        app:showAsAction="always"/>
+    <item
         android:id="@+id/action_notification"
         android:icon="@mipmap/notification"
         android:title="通知"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
