--- a/diycode-app/src/main/res/drawable/topic_reply_btn_click.xml
+++ b/diycode-app/src/main/res/drawable/topic_reply_btn_click.xml
@@ -25,7 +25,7 @@
     <solid android:color="#467EE1"/>
     <stroke
         android:width="1dp"
-        android:color="#999999"/>
+        android:color="#467EE1"/>
     <corners
         android:bottomLeftRadius="4dp"
         android:bottomRightRadius="4dp"
