--- a/diycode-app/src/main/res/layout/activity_topic_content.xml
+++ b/diycode-app/src/main/res/layout/activity_topic_content.xml
@@ -230,9 +230,10 @@
                     android:layout_marginTop="12dp"
                     android:background="@drawable/topic_reply_btn_bg"
                     android:id="@+id/send_reply"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
+                    android:layout_width="80dp"
+                    android:layout_height="36dp"
                     android:layout_alignParentRight="true"
+                    android:textColor="@color/diy_white"
                     android:layout_below="@id/my_reply"
                     android:text="发送"/>
             </RelativeLayout>
