快速返回顶部

--- a/diycode-app/src/main/res/layout/app_bar_main.xml
+++ b/diycode-app/src/main/res/layout/app_bar_main.xml
@@ -55,12 +55,13 @@
     <include layout="@layout/content_main"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:visibility="gone"
+        app:layout_scrollFlags="scroll|enterAlways"
+        android:visibility="visible"
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email"/>
+        app:srcCompat="@mipmap/fab_up"/>
 
 </android.support.design.widget.CoordinatorLayout>
