--- a/diycode-app/src/main/res/layout/app_bar_main.xml
+++ b/diycode-app/src/main/res/layout/app_bar_main.xml
@@ -55,7 +55,7 @@
     <include layout="@layout/content_main"/>
 
     <android.support.design.widget.FloatingActionButton
-        app:layout_scrollFlags="scroll|enterAlways"
+        app:layout_behavior="@string/scale_down_show_behavior"
         android:visibility="visible"
         android:id="@+id/fab"
         android:layout_width="wrap_content"
