--- a/diycode-app/src/main/res/layout/item_site.xml
+++ b/diycode-app/src/main/res/layout/item_site.xml
@@ -28,10 +28,12 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:background="@color/diy_white"
+    android:id="@+id/item"
     android:orientation="horizontal"
-    android:padding="4dp">
+    android:padding="6dp">
 
     <ImageView
+        android:layout_marginLeft="8dp"
         android:id="@+id/icon"
         android:layout_width="24dp"
         android:layout_height="24dp"
