--- a/diycode-app/src/main/res/drawable/topic_node_name_bg.xml
+++ b/diycode-app/src/main/res/drawable/topic_node_name_bg.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright 2017 GcsSloop
   ~
@@ -14,23 +13,22 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   ~
-  ~ Last modified 2017-03-08 01:01:18
+  ~ Last modified 2017-04-03 16:17:49
   ~
   ~ GitHub:  https://github.com/GcsSloop
   ~ Website: http://www.gcssloop.com
   ~ Weibo:   http://weibo.com/GcsSloop
   -->
 
-<resources>
-    <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#FFFFFF</color>
-    <color name="colorAccent">#DB3937</color>
-    <color name="diy_red">#DB3937</color>
-    <color name="diy_red2">#cc6f6e</color>
-    <color name="diy_gray">#C8C8CE</color>
-    <color name="diy_gray2">#999999</color>
-    <color name="diy_black">#4d4d4d</color>
-    <color name="diy_black2">#000000</color>
-    <color name="diy_white">#ffffff</color>
-    <color name="diy_white_bg">#F0F0F0</color>
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+       android:shape="rectangle">
+    <solid android:color="#FFF"/>
+    <stroke
+        android:width=".5dp"
+        android:color="#cc6f6e"/>
+    <corners
+        android:bottomLeftRadius="2dp"
+        android:bottomRightRadius="2dp"
+        android:topLeftRadius="2dp"
+        android:topRightRadius="2dp"/>
+</shape>
