--- a/diycode-app/src/main/res/values/styles.xml
+++ b/diycode-app/src/main/res/values/styles.xml
@@ -38,5 +38,9 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="theme_splash" parent="@android:style/Theme.NoTitleBar">
+        <item name="android:windowBackground">@drawable/splash</item>
+        <item name="android:windowAnimationStyle">@null</item>
+    </style>
 
 </resources>
